// awesome.proto
syntax = "proto3";

package awesomepackage;

message AwesomeMessage {
    string awesomeField = 1; // becomes awesomeField 
    string awesomeKey = 2; // becomes awesomeField
}